// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Permissions /> should render correctly 1`] = `
<Box__BoxGroup>
  <Box__SelectBoxGroupSection
    active={true}
    disabled={false}
    key="test_create"
    onClick={[Function]}
  >
    <Checkbox
      checked={true}
      disabled={false}
    />
    <code>
      test_create
    </code>
  </Box__SelectBoxGroupSection>
  <Box__SelectBoxGroupSection
    active={false}
    disabled={false}
    key="test_edit"
    onClick={[Function]}
  >
    <Checkbox
      checked={false}
      disabled={false}
    />
    <code>
      test_edit
    </code>
  </Box__SelectBoxGroupSection>
  <Box__SelectBoxGroupSection
    active={true}
    disabled={true}
    key="test_remove"
    onClick={null}
  >
    <Checkbox
      checked={true}
      disabled={false}
    />
    <code>
      test_remove
    </code>
  </Box__SelectBoxGroupSection>
  <Box__SelectBoxGroupSection
    active={false}
    disabled={true}
    key="test_view"
    onClick={null}
  >
    <Checkbox
      checked={false}
      disabled={false}
    />
    <code>
      test_view
    </code>
  </Box__SelectBoxGroupSection>
</Box__BoxGroup>
`;

exports[`<Permissions /> should render no permission disabled when [props.administrator=true] 1`] = `
<Box__BoxGroup>
  <Box__SelectBoxGroupSection
    active={true}
    disabled={false}
    key="test_create"
    onClick={[Function]}
  >
    <Checkbox
      checked={true}
      disabled={false}
    />
    <code>
      test_create
    </code>
  </Box__SelectBoxGroupSection>
  <Box__SelectBoxGroupSection
    active={false}
    disabled={false}
    key="test_edit"
    onClick={[Function]}
  >
    <Checkbox
      checked={false}
      disabled={false}
    />
    <code>
      test_edit
    </code>
  </Box__SelectBoxGroupSection>
  <Box__SelectBoxGroupSection
    active={true}
    disabled={false}
    key="test_remove"
    onClick={[Function]}
  >
    <Checkbox
      checked={true}
      disabled={false}
    />
    <code>
      test_remove
    </code>
  </Box__SelectBoxGroupSection>
  <Box__SelectBoxGroupSection
    active={false}
    disabled={false}
    key="test_view"
    onClick={[Function]}
  >
    <Checkbox
      checked={false}
      disabled={false}
    />
    <code>
      test_view
    </code>
  </Box__SelectBoxGroupSection>
</Box__BoxGroup>
`;
